--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "maatwebsite/excel": "~2.1.0",
         "barryvdh/laravel-dompdf": "0.6.*",
         "anchu/ftp": "~2.0",
-        "grimthorr/laravel-toast": "^1.1"
+        "grimthorr/laravel-toast": "^1.1",
+        "yajra/laravel-datatables-oracle": "6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
