--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "barryvdh/laravel-dompdf": "0.6.*",
         "anchu/ftp": "~2.0",
         "grimthorr/laravel-toast": "^1.1",
-        "yajra/laravel-datatables-oracle": "6.0"
+        "yajra/laravel-datatables-oracle": "^6.27"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
